...
      Tab(value: .watchlists) {
        NavigationStack(path: $router.watchlistsPath) {
          WatchlistsView().navigationDestination(for: Route.self, destination: destination)
            .modifier(SelectionNavigationModifier(tab: .watchlists))
        }
      } label: {
        Image("NavigationWatchlists").renderingMode(.template).accessibilityLabel("Watchlists")
      }
      Tab(value: .compare) {
        NavigationStack(path: $router.comparePath) {
          CompareView().navigationDestination(for: Route.self, destination: destination)
        }
      } label: {
        Image("NavigationCompare").renderingMode(.template).accessibilityLabel("Compare")
      }
      Tab(value: .screener) {
        NavigationStack(path: $router.screenerPath) {
          ScreenerView().navigationDestination(for: Route.self, destination: destination)
            .modifier(SelectionNavigationModifier(tab: .screener))
        }
...
